updated html and css code for layout and content

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "Biosite"
+        "Biosite",
+        "bottomnav",
+        "leftcolumn",
+        "rightcolumn"
     ]
 }
