--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Biosite",
         "bottomnav",
         "leftcolumn",
-        "rightcolumn"
+        "rightcolumn",
+        "sidebyside"
     ]
 }
